--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    
+    <h1>Hope-Simpson 2.7 More accurate spectral analysis</h1>
     <div id="map"></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
